<?xml version="1.0"?>
<package>

  <name>nautonomous_propulsion_publisher</name>
  <version>0.0.0</version>
  <description>The nautonomous_propulsion_publisher package</description>

  <maintainer email="daan.zeeuwe01@waternet.nl">Daan Zeeuwe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
